# agent-simulation

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  agent-simulation.code-workspace  agent-simulation.js  generate_cmake.py  index.html
assets/: index-CLtLHb76.js  index-CclTW7iQ.js  index-DtWcuJ78.js  index-dly---Hk.js
src/: ActionSystem.cpp  ActionSystem.h  Component.cpp  Component.h  Cords.h  DecaySystem.cpp  DecaySystem.h  DecisionSystem.cpp  DecisionSystem.h  Engine.cpp  Engine.h  EngineLog.hpp  Entity.hpp  EntityManager.cpp  EntityManager.h  Grid.cpp  Grid.h  KnowledgeSystem.cpp  KnowledgeSystem.h  MovementSystem.cpp  MovementSystem.h  main.cpp  utility.hpp  wasm_bindings.cpp
web/: .prettierignore  agent-simulation.js  agent-simulation.wasm  index.html  package-lock.json  package.json  renderer.js  vite.config.ts
web/public/: agent-simulation.wasm
web/src/: App.tsx  Constants.tsx  EntityStats.tsx  EntityStatsPanel.tsx  Legend.tsx  SimStats.tsx  SimStatsPanel.tsx  TickCounter.tsx  canvas.tsx
